<resources>
    <string name="app_name">Memory Game</string>
    <string name="action_settings">Settings</string>
    <string name="game_title">Memory Game</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="high_scores">High Scores</string>
    <string name="title_activity_game_screen">Memory Game</string>
    <string name="easy_text">Easy (4x4)</string>
    <string name="medium_text">Medium (5x6)</string>
    <string name="hard_text">Hard (6x8)</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="find_pairs">Find pairs!</string>
    <string name="go_fast_text">Race the clock!</string>
    <string name="progress_text">See your high scores!</string>
    <string name="tutorial_label_play">Play</string>
    <string name="tutorial_label_speed">Speed</string>
    <string name="tutorial_label_scores">Scores</string>
    <string name="create_profile">To begin:</string>
    <string name="start">Start</string>
    <string name="tutorial_label_start">Start!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="gender_label">Gender</string>
    <string name="age_label">Age</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="edit_age_hint">Enter your age</string>
    <string name="female_radio_text">Female</string>
    <string name="male_radio_text">Male</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="hs_easy">Easy</string>
    <string name="hs_medium">Medium</string>
    <string name="hs_hard">Hard</string>
    <string name="action_reset">Reset</string>
    <string name="action_clear_scores">Clear</string>
    <string name="all_text">All</string>
    <string name="hs_clear_dialog_title">Choose scores to clear:</string>
    <string name="clear_button">Clear</string>
    <string name="cancel_btn">Cancel</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="change_usr_btn">Change User</string>
    <string name="choose_difficulty">Choose your difficulty!</string>
    <string name="tutorial_label_difficulty">Difficulty</string>
    <string name="create_profile_btn">Create your profile</string>
</resources>
